# zum-GeoXL35

./: README.md
source/: CMakeLists.txt
source/cmake/: README  find3rd.cmake  listFile.cmake  macros.cmake  note  pathEnv.txt  projBody.cmake
source/cmake/Modules/: FindAssimp.cmake  FindCg.cmake
source/modules/projects/projectsEG2014/: CMakeLists.txt.back  projectsEG2014.props  projectsEG2014.vcxproj  projectsEG2014.vcxproj.filters
source/modules/projects/projectsEG2014/doc/developer/: projectsEG2014.module.dev.html
source/modules/projects/projectsEG2014/doc/user/: projectsEG2014.module.user.html
source/modules/projects/projectsEG2014/qt/: projectsEG2014.qrc
source/modules/projects/projectsEG2014/source/: AttachmentBuildingBlock.cpp  AttachmentBuildingBlock.h  AttachmentBuildingBlockUpward.cpp  AttachmentBuildingBlockUpward.h  PCIBuildingBlockEG2014.cpp  PCIBuildingBlockEG2014.h  StdAfx.cpp  StdAfx.h  projectsEG2014.cpp  projectsEG2014.h  projectsEG2014.tags.h
source/modules/projects/projectsXWu/: CMakeLists.txt
source/modules/projects/projectsXWu/doc/developer/: projectsXWu.html
source/modules/projects/projectsXWu/qt/: projectsXWu.qrc
source/modules/projects/projectsXWu/source/: CommonHdrXWu.h  InitProjectsXWu.h  ProjectSettings.cpp  ProjectSettings.h  StdAfx.cpp  StdAfx.h  projectsXWu.cpp  projectsXWu.h  projectsXWu.tags.h
source/modules/projects/projectsXWu/source/CoOccur/: PCIRepICP.cpp  PCIRepICP.h
source/modules/projects/projectsXWu/source/Cosyn/: C13DescriptorAttachment.cpp  C13DescriptorAttachment.h  C13MultiScaleFeatureDescriptor.cpp  C13MultiScaleFeatureDescriptor.h  C13MultiScaleFeatureDetector.cpp  C13MultiScaleFeatureDetector.h  CellNN.cpp  CellNN.h  CellPlane.cpp  CellPlane.h  CrossFeatureDetector.cpp  CrossFeatureDetector.h  DenseGrid3.h  EditSynGizmoHandler.cpp  EditSynGizmoHandler.h  EditSynGizmoHandlerControl.cpp  EditSynGizmoHandlerSelect.cpp  GraphicalModelProxy.cpp  GraphicalModelProxy.h  GridAligner.h  GridAligner.inline.h  GridLabelAttachment.cpp  GridLabelAttachment.h  GroupGenerator.cpp  GroupGenerator.h  KNNPaternGentor.cpp  KNNPaternGentor.h  ObjectCollection.cpp  ObjectCollection.h  PCICosyn.cpp  PCICosyn.h  PCIEditSyn.cpp  PCIEditSyn.h  PCIMSFeatureAlign.cpp  PCIMSFeatureAlign.h  PCIMSFeatureAlign_Basics.cpp  PCIMSFeatureAlign_Show.cpp  PCISelDelMark.cpp  PCISelDelMark.h  PCISupres.Basics.cpp  (+17 more)
source/modules/projects/projectsXWu/source/GraphicalModel/: GraphicalModel.hpp  GraphicalModel_Factor.hpp  GraphicalModel_Function.hpp  GraphicalModel_Space.hpp
source/modules/projects/projectsXWu/source/Interface/: EditSynHandle.cpp  EditSynHandle.h  Handle3DGizmo.cpp  Handle3DGizmo.h  Handle3DList.cpp  Handle3DList.h  Handle3DListWidget.cpp  Handle3DListWidget.h  Handle3DListWidgetForm.ui  SymmetryBrowserDialog.cpp  SymmetryBrowserDialog.h  SymmetryBrowserDialog.ui
source/modules/projects/projectsXWu/source/LibGizmo/: IGizmo.h
source/modules/projects/projectsXWu/source/LpCVT/: PCILpCVT.cpp  PCILpCVT.h
source/modules/projects/projectsXWu/source/PCC/: PCCSDTestCases.cpp  PCCSDTestCases.h
source/modules/projects/projectsXWu/source/PCI/: Handle3DGizmoHandler.cpp  Handle3DGizmoHandler.h  Handle3DGizmoHandlerControl.cpp  Handle3DGizmoHandlerSelect.cpp  Handle3DGizmoHandlerSymCon.cpp  Handle3DGizmoHandlerSymSel.cpp  PCISymmDefield.cpp  PCISymmDefield.h  PCISymmDefield_UI.cpp  PCISymmDet.cpp  PCISymmDet.h
source/modules/projects/projectsXWu/source/RepDetEditor/: Box.h  CLLabelsGroundTruth2015.cpp  CLLabelsGroundTruth2015.h  CLPRBoxGroundTruth2015.cpp  CLPRBoxGroundTruth2015.h  CLResultsBoxGroundTruth2015.cpp  CLResultsBoxGroundTruth2015.h  PCICL3DRepetitionGroundTruth2015.cpp  PCICL3DRepetitionGroundTruth2015.h  PCICL3DRepetitionGroundTruth2015EditorForm.ui  PCICL3DRepetitionGroundTruth2015EditorWidget.cpp  PCICL3DRepetitionGroundTruth2015EditorWidget.h  PCICLGroundTruth2015EditorForm.ui  PCICLPointCloudProcessing.cpp  PCICLPointCloudProcessing.h
source/modules/projects/projectsXWu/source/SPSolver/: HandleConstraints.cpp  HandleConstraints.h  LaplacianRegularizer.cpp  LaplacianRegularizer.h  MeshInterpolater.cpp  MeshInterpolater.h  SlideConstraints.cpp  SlideConstraints.h  SymmSpaceBasis.cpp  SymmSpaceBasis.h  SymmSpaceBasisSolver.cpp  SymmSpaceBasisSolver.h  SymmSpaceDirectNullSpaceSolver.cpp  SymmSpaceDirectNullSpaceSolver.h  SymmSpaceDirectSolver.cpp  SymmSpaceDirectSolver.h  SymmSpaceFoldSolver.cpp  SymmSpaceFoldSolver.h  SymmSpaceNullSpace.cpp  SymmSpaceNullSpace.h  SymmSpaceSolver.cpp  SymmSpaceSolver.h  SymmetryConstraints.cpp  SymmetryConstraints.h  direct_solver.m  null_space_solver.m
source/modules/projects/projectsXWu/source/SToolBox/: DefieldSymm.cpp  DefieldSymm.h  DefieldSymmDihedral.cpp  DefieldSymmDihedral.h  DefieldSymmRotation.cpp  DefieldSymmRotation.h  DummySampler.cpp  DummySampler.h  SamplerSymmBlock.cpp  SamplerSymmBlock.h  SymmLineSampler.cpp  SymmLineSampler.h  SymmSampleGraph.cpp  SymmSampleGraph.h  SymmSampler.cpp  SymmSampler.h
source/modules/projects/projectsXWu/source/StatiCosyn/: PCIStatiCosyn.cpp  PCIStatiCosyn.h  PCIStatiCosyn_Basics.cpp  PointVoxelGrid.cpp  PointVoxelGrid.h  VoxelJointGrid.cpp  VoxelJointGrid.h
source/modules/projects/projectsXWu/source/Super4PCS/: pairCreationFunctor.h  shared4pcs.h  super4pcs.cpp
source/modules/projects/projectsXWu/source/SymmGroup/: CCSGSymmetryGroup.cpp  CCSGSymmetryGroup.h  PCIConsistentCrossShapeGrammar.cpp  PCIConsistentCrossShapeGrammar.h  PCISymmGroup.cpp  PCISymmGroup.h
source/modules/projects/projectsXWu/source/Symmetry/: GroupOrbit.cpp  GroupOrbit.h  PatternRotation.cpp  PatternRotation.h  PatternSymmetry.h  PatternTranslation.cpp  PatternTranslation.h  SymmContainer.cpp  SymmContainer.h  SymmDetCont.cpp  SymmDetCont.h  SymmDetHiPrec.cpp  SymmDetHiPrec.h  SymmFeat.cpp  SymmFeat.h  SymmFeatFrame.cpp  SymmFeatFrame.h  SymmFeatProxy.cpp  SymmFeatProxy.h  SymmPlane.cpp  SymmPlane.h  SymmReflective.cpp  SymmReflective.h  SymmRotation.cpp  SymmRotation.h  SymmTranslation.cpp  SymmTranslation.h
(+125 files in other folders)
